# pythoncode

./: .gitignore  404.html  README.md  arrow.py  arrow_grid.py  bike_calc.py  chinesetest.py  computational_geometry.py  dancingparticles.py  drawheart.py  ecc.py  evcar_calc.py  game.py  generative_art1.py  gratitudes.py  imageidentify.py  imageidentify2.py  imagemetadata.py  index.html  objects.inv  pygame_test.py  pyproject.toml  requirements.txt  socialchart.py  tracker_income.py  tracker_timeoff.py  vector_assess.py  vector_calc.py  words.csv  words122.csv  words14.csv  words190.csv  words192.csv  words195.csv  words204.csv  words5000.csv  words7.csv  words8.csv
.ipynb_checkpoints/: gratitudes-checkpoint.py
cardgame/: creature.py  creatures.yaml  display.py  main.py  traits.yaml  turn.py  turn_print.py
gymnasium_test/: gym_test.py
images/: imagecaptions.txt  imagecaptions2.txt
markdown_test/: mkdocs.yml
markdown_test/docs/blog/posts/: entrythree.md  entrytwo.md
output_vectors/: 1.npy  1test.npy  2.npy  onehundredvectors.npy  onevector.npy  output2.npy  test1.npy
reference/: index.html
socialnetwork/: mkdocs.yml
socialnetwork/docs/: index.md  reference.md  tutorials.md
socialnetwork/socialchart/: __init__.py  socialchart.py
teachpython/: hello.py
tutorials/: index.html
