[project]
name = "pythoncode"
version = "0.1.0"
description = "A collection of Python scripts"
requires-python = ">=3.12"
dependencies = [
    "Pillow",
    "exif",
    "matplotlib",
    "Shapely",
    "rich",
    "networkx",
    "numpy",
    "pandas",
    "pycountry",
    "pygame",
    "reverse-geocoder",
    "PyYAML",
    "gymnasium",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
